crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__fn_decl_no_paren_after_colon.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: expected paren after args indicator
   ╭─[<test>:1:9]
   │
 1 │ def x : do echo hi end
   │       ┬  
   │       ╰── after this indicator
───╯

